--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,12 +3,13 @@
 :root {
   --app-header-height: 3.8rem;
   --app-footer-height: 3.5rem;
+  --app-min-width: 320px;
 }
 
 html, body {
   margin: 0;
   padding: 0;
-  min-width: 320px;
+  min-width: var(--app-min-width);
 }
 
 main {
